User johns
Date:

    Add optional argument (display) to ATTA svdrp commmand.
    Wakeup display to show OSD for remote learning mode.
    Support switching the primary device with svdrp.
    Disable and reenable screen saver and DPMS.
    Video source code cleanup.
    Fix fast backward with some h264 streams.
    Make soft start sync setup menu configurable.
    Fix bug: StillPicture NAL end of sequence is 10 and not 0x10.
    Fix bug: AudioEnqueue crash without sound card.

User johns
Date: Sun Mar  4 22:35:36 CET 2012

    Release Version 0.4.9
    Experimental ac3 audio drift correction support.
    Removes LPCM detection from TS parser.
    Rewrote video/audio start code.
    Add support for attach/detach plugin.
    OSS needs bigger audio buffers.
    Improved audio drift correction support.
    Experimental audio drift correction support.
    Add SVDRP HOTK command support.
    Increased audio buffer time for PES packets.
    Support configuration and set of video background.
    Survive lost X11 display.
    Fix bug: 100% cpu use with plugins like mp3.
    Wakeup display thread on channel switch, osd can now be shown without
    video.
    Makes 60Hz display mode configurable with setup.conf.
    Support downmix of AC-3 to stero.
    New audio PES packet parser.
    Fix bug: Grabbing a JPG image fails while suspended.
    Add support for hot keys.
    Add support to use characters input in edit mode.
    Adds trick speed support.

User johns
Date: Thu Feb 16 09:59:14 CET 2012

    Release Version 0.4.8
    Fix bug: wrong start of video packet.
    VDPAU: Enables inverse telecine configuration.
    Find AC3 (Dolby Digital) inside PES packet.
    Fix bug: audio increments invalid audio PTS.
    Fix bug: dvd plugin not working.
    Fix bug: used frame-> instead of video_ctx-> for old libav/ffmpeg.

User johns
Date: Mon Feb 13 23:20:26 CET 2012

    Release Version 0.4.7

User FireFly
Date: Mon Feb 13 20:14:11 CET 2012
