@@ -1,5 +1,10 @@
+User: CafeDelMar
+Date: Mon Mar 26 20:45:54 CEST 2012
+
+    Add VideoSkipPixels support.
+
 User johns
-Date:
+Date: Fri Mar 23 18:43:20 CET 2012
 
     Add optional argument (display) to ATTA svdrp commmand.
     Wakeup display to show OSD for remote learning mode.
